Bug 74229 - FILEOPEN: values in RTF cells are too close
Summary: FILEOPEN: values in RTF cells are too close
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
3.6.5.2 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.4.0
Keywords: bibisected, filter:rtf, regression
Depends on:
Blocks: RTF
  Show dependency treegraph
 
Reported: 2014-01-30 15:46 UTC by Benjamin Bellec
Modified: 2015-12-17 05:51 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
example file (28.26 KB, application/rtf)
2014-01-30 15:52 UTC, Benjamin Bellec
Details
LO_4.0.4.2_on_CentOS6 (85.68 KB, image/png)
2014-04-09 09:32 UTC, Benjamin Bellec
Details
screenshot 3.6.1 vs 4.2.5 (71.85 KB, image/png)
2014-07-20 11:43 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benjamin Bellec 2014-01-30 15:46:34 UTC

    
Comment 1 Benjamin Bellec 2014-01-30 15:52:02 UTC
In the example file attached, in the second table, the values inside the second cell ("PERIOD" row) and the third one are too close.

It looks like there is a value "31 2 3" in the third column but in fact it is "3" in the second and "1 2 3" in the third one.

Opening the file with Office 2003 or 2010 is OK (cells are really "visible").
Comment 2 Benjamin Bellec 2014-01-30 15:52:38 UTC
Created attachment 93064 [details]
example file
Comment 3 Benjamin Bellec 2014-01-30 17:15:46 UTC
In the example file attached, in the second table, the values inside the second cell ("PERIOD" row) and the third one are too close.

It looks like there is a value "31 2 3" in the third column but in fact it is "3" in the second and "1 2 3" in the third one.

Opening the file with Office 2003 or 2010 is OK (cells are really "visible").
Comment 4 Benjamin Bellec 2014-01-31 10:49:27 UTC
The problem doesn't occurs with Apache OpenOffice 4.0.1
Comment 5 tommy27 2014-04-09 04:45:17 UTC
confirmed under Win7x64

correct display of values in RTF cells using 3.6.1.2 

values became too close in version 3.6.6.2, hence regression.

issue persists in 4.2.2.1 and 4.3.0.0alpha0+ 2014-04-05 build

@Benjamin
please specify your O/S
Comment 6 tommy27 2014-04-09 05:15:31 UTC
after testing with other version I've found that the bug was introduced in 3.6.5.2 whilst it was working fine in 3.6.4.3 release

that should be a quite narrow committ range to discover what caused the regression
Comment 7 Benjamin Bellec 2014-04-09 09:31:23 UTC
(In reply to comment #5)
> @Benjamin
> please specify your O/S

I initially spotted this on Win7x64.
I just tested with version 4.1.5.3 on Windows XP and the problem is the same.

I also tested with the packaged version of CentOS 6 (x86-64) (LibreOffice 4.0.4.2) and the problem is also here too but there is one more difference (look at the attachment).
Comment 8 Benjamin Bellec 2014-04-09 09:32:27 UTC
Created attachment 97127 [details]
LO_4.0.4.2_on_CentOS6
Comment 9 tommy27 2014-07-20 11:43:07 UTC
Created attachment 103136 [details]
screenshot 3.6.1 vs 4.2.5

issue persists in LibO 4.2.5.2 and 4.4.0.0.alpha0+
Build ID: b9dca968c6fd0ab5ca140c65b0e54d153cd34986
TinderBox: Win-x86@42, Branch:master, Time: 2014-07-18_22:51:20

see compararive screenshot between 3.6.1 (correct) and 4.2.5 (bug)
Comment 10 Marina Latini (SUSE) 2014-07-21 13:26:20 UTC
also confirmed on LibO
* Version: 4.3.0.3
* Build ID: 08ebe52789a201dd7d38ef653ef7a48925e7f9f7
* OS: Ubuntu 14.04 x86_64

added filter:rtf in whiteboard and meta bug 81234
Comment 11 Xisco Faulí 2014-07-23 09:25:52 UTC
bibisected:
 46f9a799a00ba869957d7aa7650cae7fd2501394 is the first bad commit
commit 46f9a799a00ba869957d7aa7650cae7fd2501394
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Tue Dec 11 04:10:45 2012 +0000

    source-hash-a43a76cd5aa2f145f2cb43fcdbc8f21fb6c89af0
    
    commit a43a76cd5aa2f145f2cb43fcdbc8f21fb6c89af0
    Author:     Fridrich Štrba <fridrich.strba@bluewin.ch>
    AuthorDate: Thu Nov 15 08:54:11 2012 +0100
    Commit:     Fridrich Štrba <fridrich.strba@bluewin.ch>
    CommitDate: Thu Nov 15 08:54:29 2012 +0100
    
        Differenciate error messages to know quickly what failed
    
        Change-Id: I4a445c345706351da8f022180d142249340acd2f

:100644 100644 29d96b0de6d16a73b1e9ff2ca8745b115e40d115 738578ee72c5b929f6609df9971137caf4a49dd2 M	autogen.log
:100644 100644 fc50744f3abcdc37e7e8ae63b5ee73f25bb1c6e9 5f2a44c5e7ce0c7653b5834e1f4a329791243ae2 M	ccache.log
:100644 100644 28c61ffba7e7adab533f7ff9a4f4f595e4439822 e1b88a7fa01b6f2a281894d7f6849ab2330aab76 M	commitmsg
:100644 100644 144992024292b77d35ec3f94e2b3fd309f9d27f1 33209181930196bebdc405c8ca66e9169724b348 M	dev-install.log
:100644 100644 ae2cc20a3e3477e7b1845778dd570bf277812953 1260d21415e7d260c7b6a1ca81cde42fee4ecbaa M	make.log
:040000 040000 2c1a78c87a5e84fe1c2bafb167b87e7c85aed252 fa33c45cc461aca44e2b41f25b965b8dc089ba34 M	opt

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect bad e02439a3d6297a1f5334fa558ddec5ef4212c574
# good: [8f4aeaad2f65d656328a451154142bb82efa4327] source-hash-1885266f274575327cdeee9852945a3e91f32f15
git bisect good 8f4aeaad2f65d656328a451154142bb82efa4327
# bad: [9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02] source-hash-8600bc24bbc9029e92bea6102bff2921bc10b33e
git bisect bad 9995fae0d8a24ce31bcb5e9cd0459b69cfbf7a02
# good: [51b63dca7427db64929ae1885d7cf1cc7eb0ba28] source-hash-806d18ae7b8c241fe90e49d3d370306769c50a10
git bisect good 51b63dca7427db64929ae1885d7cf1cc7eb0ba28
# bad: [d65a58c31c8da044ef66ae4517fa2fe74cec0019] source-hash-2e053cf5ea4d93a2e1845e795a9c7fe1e08c84af
git bisect bad d65a58c31c8da044ef66ae4517fa2fe74cec0019
# bad: [79e02001f27d33b3b478324ab6fba5683413b4d9] source-hash-b6c016da23d309b4ac7d154bc33a22397974ed73
git bisect bad 79e02001f27d33b3b478324ab6fba5683413b4d9
# good: [183a576d94de9a9439d580c8b81f335ab57cdbdc] source-hash-a599f5b4b51848e3b397d471c9d12b373caadcef
git bisect good 183a576d94de9a9439d580c8b81f335ab57cdbdc
# good: [a67b874d60de1f1a44bef57a53a7b8a84db0ba58] source-hash-19f4ebd8a54da0ae03b9cc8481613e5cd20ee1e7
git bisect good a67b874d60de1f1a44bef57a53a7b8a84db0ba58
# bad: [221bf5c0db153e24c67ff29fe614af7cc010a356] source-hash-9210b95bcfd65ae558f445666d9b880e794d4c74
git bisect bad 221bf5c0db153e24c67ff29fe614af7cc010a356
# bad: [46f9a799a00ba869957d7aa7650cae7fd2501394] source-hash-a43a76cd5aa2f145f2cb43fcdbc8f21fb6c89af0
git bisect bad 46f9a799a00ba869957d7aa7650cae7fd2501394
# first bad commit: [46f9a799a00ba869957d7aa7650cae7fd2501394] source-hash-a43a76cd5aa2f145f2cb43fcdbc8f21fb6c89af0
Comment 12 Xisco Faulí 2014-07-23 09:43:22 UTC
It looks like this issue was introduced by the following commit: c4b91ae3178011c66c76c711c1a6469ba658872e

@Miklos, Could you please take a look at it whenever you have some time?
Comment 13 Miklos Vajna 2014-08-28 13:26:46 UTC
Yes, I'll take care of it. \trgaph was never imported before, but since the fix for bug 55525, we have the correct cell margin defaults, and that exposed the underlying problem.
Comment 14 Commit Notification 2014-08-28 14:37:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=54bdfe0a891f2119bc35c5d82ecbc94c8cb13c0b

fdo#74229 import RTF_TRGAPH



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Robinson Tryon (qubit) 2015-12-17 05:51:46 UTC
Migrating Whiteboard tags to Keywords: (bibisected, filter:rtf)
[NinjaEdit]