fdo#74229 import RTF_TRGAPH

Regression from commit c4b91ae3178011c66c76c711c1a6469ba658872e
(fdo#55525 import RTF_TRLEFT, 2012-11-13).

Change-Id: I90f2c6399cfaf8399de0cf3488a23af6cc84710d
(cherry picked from commit 54bdfe0a891f2119bc35c5d82ecbc94c8cb13c0b)